--- a/app/views/comments/index.html.erb
+++ b/app/views/comments/index.html.erb
@@ -1,3 +1,23 @@
 <%= link_to 'Contact us', 'comments/new' %>
 <p id="notice"><%= notice %></p>
 
+<h1>List of Comments</h1>
+<table>
+  <tr>
+    <th>Email</th>
+    <th>Subject</th>
+    <th>Description</th>
+    <th>First Name</th>
+    <th>Last Name</th>
+  </tr>
+  <% @comments.each do | comment | %>
+  <tr>
+    <td><%= comment.email %></td>
+    <td><%= comment.subject %></td>
+    <td><%= comment.description %></td>
+    <td><%= comment.first_name %></td>
+    <td><%= comment.last_name %></td>
+  </tr>
+  <% end %>
+</table>
+
