--- a/app/views/comments/index.html.erb
+++ b/app/views/comments/index.html.erb
@@ -9,6 +9,7 @@
     <th>Description</th>
     <th>First Name</th>
     <th>Last Name</th>
+    <th></th>
   </tr>
   <% @comments.each do | comment | %>
   <tr>
@@ -17,6 +18,7 @@
     <td><%= comment.description %></td>
     <td><%= comment.first_name %></td>
     <td><%= comment.last_name %></td>
+    <td><%= link_to 'Delete', comment, method: :delete %></td>
   </tr>
   <% end %>
 </table>
