--- a/app/views/comments/new.html.erb
+++ b/app/views/comments/new.html.erb
@@ -1,27 +1,3 @@
 <h1>Contact Us</h1>
 
-
-<%= form_for @comment do |f| %>
-
-    <ul>
-      <% @comment.errors.full_messages.each do | error | %>
-        <li><%= error %></li>
-      <% end %>
-    </ul>
-  <%= f.label :email %>
-  <%= f.text_field :email %>
-
-  <%= f.label :subject %>
-  <%= f.text_field :subject %>
-
-  <%= f.label :description %>
-  <%= f.text_field :description %>
-
-  <%= f.label :first_name, 'First Name' %>
-  <%= f.text_field :first_name %>
-
-  <%= f.label :last_name, 'Last Name' %>
-  <%= f.text_field :last_name %>
-
-  <%= f.submit value: 'Submit' %>
-<% end %>
+<%= render 'form' %>
